#4141 Add PYTHONUNBUFFERED=0 to docker-compose file in order to show all `print` logging when running Arches with docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
         # - DJANGO_REMOTE_DEBUG=False
         - COMPRESS_STATIC_FILES=False
         - DOMAIN_NAMES=localhost
+        - PYTHONUNBUFFERED=0
         - TZ=PST
       ports:
         - '8000:8000'
